bad/func_call_invalid_arg_conversion_class_to_bool.example_compiler_output
ERROR
[1mbad/func_call_invalid_arg_conversion_class_to_bool.lat:5:6: [1;31merror: [0;1mvalue of type `X` is not convertible to type `boolean`[m
	foo(new X);
	    [1;32m^[m
[1mbad/func_call_invalid_arg_conversion_class_to_bool.lat:9:1: [1;34mnote: [0;1m`foo` declared here[m
void foo(boolean b) {}
[1;32m^[m
